2003-02-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gnome-find from gnome-i18n.

2003-02-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-session has been branched.
	Reflect	this.

2003-02-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: eog has been branched. Reflect
	this.

2002-02-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Firestarter is now in GNOME cvs,
	reflect this.

2003-02-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: procman has been branched. Reflect
	this.

2003-02-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed glimmer from gnome-i18n.

2003-02-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed atomix from gnome-i18n.

2003-02-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Sorted gpdf correctly.

2003-02-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gimp-perl.

2003-02-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gimp-tips to 2.1-extras.

2003-02-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved gcalctool and zenity to
	2.1-fifth-toe.

2003-02-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-control-center has been branched.
	Reflect this.

2003-02-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: bug-buddy has been branched. Reflect
	this.

2003-02-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added stickynotes_applet to
	2.1-fifth-toe.

2003-02-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added themus to 2.1-extras.

2003-02-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Massive changes; tried to correct the
	modules used for 2.1 Fifth Toe by using the Fifth Toe web site.

2003-01-30  Christian Rose  <menthos@menthos.com>
