@@ -3286,15 +3286,6 @@
       </component>
     </version>
   </module>
-  <module name="toutdoux">
-    <version release="gnome-1.4-fifth-toe">
-      <component name="toutdoux" dir="gnome-i18n">
-	<podir dir="extra-po/toutdoux"/>
-	<potname name="toutdoux.pot"/>
-	<branch name="HEAD"/>
-      </component>
-    </version>
-  </module>
   <module name="uf-view">
     <version release="gnome-2.0-extras">
       <component name="uf-view" dir="uf-view">
