@@ -1,5 +1,9 @@
 2003-02-20  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Removed toutdoux from gnome-i18n.
+
+2003-02-20  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Removed gnome-find from gnome-i18n.
 
 2003-02-17  Christian Rose  <menthos@menthos.com>
